--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\abhin\\Programs\\envs\\jarvis\\python.exe"
+    "python.pythonPath": "C:\\Users\\abhin\\AppData\\Local\\Programs\\Python\\Python36\\python.exe"
 }
